--- a/package.json
+++ b/package.json
@@ -11,7 +11,6 @@
     "ctype": "0.5.4",
     "digest-stream": "0.2.2",
     "docker-file-parser": "git+https://github.com/joyent/node-docker-file-parser.git#ba6b4ce0e09a1432b200a55851d2899109d68ae2",
-    "effluent-logger": "git+https://github.com/joshwilsdon/effluent-logger.git#d662f161a07f94045ad2afb45442931511c40e51",
     "kstat": "1.0.1",
     "lazy-property": "1.0.0",
     "libuuid": "0.2.1",
@@ -23,16 +22,16 @@
     "pty.js": "0.3.1",
     "restify": "4.3.0",
     "rimraf": "2.4.3",
-    "sdc-clients": "10.0.3",
+    "sdc-clients": "git+https://github.com/joyent/node-sdc-clients.git#rfd-35-cls",
     "sdc-docker-build": "git+https://github.com/joyent/sdc-docker-build.git#af8bd3e",
     "semver": "2.2.1",
     "shell-escape": "^0.2.0",
     "sprintf": "0.1.5",
-    "trace-event": "git+https://github.com/joyent/node-trace-event.git#9f7d00b8c3594def9ef534f68c16c215c3dba9f2",
     "tracker": "git+https://github.com/joyent/node-tracker.git#3a139906c9eb8d8684ac54cf54cd010315856042",
+    "triton-tracer": "git+https://github.com/joshwilsdon/triton-tracer.git#rfd-35-cls",
     "vasync": "1.6.4",
     "verror": "1.9.0",
-    "vmadm": "git+https://github.com/joyent/node-vmadm.git#94e95c6b96c2c5947281a5ea3df763928a65219c",
+    "vmadm": "git+https://github.com/joyent/node-vmadm.git#rfd-35-cls",
     "zfs": "git+https://github.com/joyent/node-zfs.git#657a90d9424c45066e3e0919dfe9b34f5636e0e9"
   },
   "sdcDependencies": {
